column block alignment fixed

--- a/static-app/assets/css/styles.css
+++ b/static-app/assets/css/styles.css
@@ -8288,7 +8288,7 @@ height: auto;
 		display: none !important;
 	}
 	.columnBlocks {
-		display: block !important;
+		display: block;
 	}
 	
 }
